fixing alignment stuff

--- a/styles.css
+++ b/styles.css
@@ -30,6 +30,7 @@ body {
   }
 
   #setup,
+  #disclaimer,
   #quiz-container {
     max-width: 800px;
     margin: 0 auto;
